--- a/02-mocking/package.json
+++ b/02-mocking/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.3",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
+    "happy-dom": "^17.4.4",
     "npm-run-all2": "^7.0.2",
     "sass": "1.77.6",
     "type-coverage": "^2.29.7",
